fixed extra padding

--- a/style.css
+++ b/style.css
@@ -45,8 +45,6 @@ canvas {
 	width: 100%;
 	height: 100vh;
     /* border: 2px solid red; */
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 .upload-btn::before,
